[gd_scene load_steps=4 format=3 uid="uid://bv4pk83apnmrd"]

[ext_resource type="Script" uid="uid://6ay5uegyapjr" path="res://addons/godot_redis_cpp/network_manager.gd" id="2_xwhb6"]
[ext_resource type="Script" uid="uid://dgpa12y2hlpdb" path="res://addons/godot_redis_cpp/client_modules/login_controller.gd" id="3_hnckm"]
[ext_resource type="Script" uid="uid://b4p5j446f1lvt" path="res://access_panel.gd" id="6_nqir7"]

[node name="GameNode" type="Node"]

[node name="RedisStack" type="Node" parent="."]

[node name="NetworkManager" type="Node" parent="RedisStack"]
script = ExtResource("2_xwhb6")

[node name="LoginController" type="Node" parent="RedisStack/NetworkManager"]
script = ExtResource("3_hnckm")

[node name="AccessPanel" type="Control" parent="." node_paths=PackedStringArray("login_controller")]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 647.0
script = ExtResource("6_nqir7")
login_controller = NodePath("../RedisStack/NetworkManager/LoginController")

[node name="PanelRegister" type="Panel" parent="AccessPanel"]
layout_mode = 0
offset_left = 136.0
offset_top = 65.0
offset_right = 429.0
offset_bottom = 446.0

[node name="Title" type="Label" parent="AccessPanel/PanelRegister"]
layout_mode = 0
offset_left = 77.0
offset_top = 15.0
offset_right = 214.78653
offset_bottom = 49.310272
theme_override_font_sizes/font_size = 21
text = "Register"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UserLineEdit" type="LineEdit" parent="AccessPanel/PanelRegister"]
layout_mode = 0
offset_left = 43.0
offset_top = 127.0
offset_right = 250.0
offset_bottom = 168.0
placeholder_text = "User"

[node name="PasswordLineEdit" type="LineEdit" parent="AccessPanel/PanelRegister"]
layout_mode = 0
offset_left = 43.0
offset_top = 198.0
offset_right = 250.0
offset_bottom = 235.0
placeholder_text = "Password"
secret = true

[node name="RegisterButton" type="Button" parent="AccessPanel/PanelRegister"]
layout_mode = 0
offset_left = 95.0
offset_top = 275.0
offset_right = 181.0
offset_bottom = 320.0
text = "Register"

[node name="RegisterStatus" type="Label" parent="AccessPanel/PanelRegister"]
layout_mode = 0
offset_top = 56.0
offset_right = 294.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(1, 0, 1, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelLogin" type="Panel" parent="AccessPanel"]
layout_mode = 0
offset_left = 707.0
offset_top = 66.0
offset_right = 1000.0
offset_bottom = 447.0

[node name="Title" type="Label" parent="AccessPanel/PanelLogin"]
layout_mode = 0
offset_left = 77.0
offset_top = 15.0
offset_right = 214.78653
offset_bottom = 49.310272
theme_override_font_sizes/font_size = 21
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UserLineEdit" type="LineEdit" parent="AccessPanel/PanelLogin"]
layout_mode = 0
offset_left = 43.0
offset_top = 127.0
offset_right = 250.0
offset_bottom = 168.0
placeholder_text = "User"

[node name="PasswordLineEdit" type="LineEdit" parent="AccessPanel/PanelLogin"]
layout_mode = 0
offset_left = 43.0
offset_top = 198.0
offset_right = 250.0
offset_bottom = 235.0
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="AccessPanel/PanelLogin"]
layout_mode = 0
offset_left = 117.0
offset_top = 275.0
offset_right = 183.0
offset_bottom = 320.0
text = "Login"

[node name="LoginStatus" type="Label" parent="AccessPanel/PanelLogin"]
layout_mode = 0
offset_top = 50.0
offset_right = 294.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(1, 0, 1, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
